supply chain tracker: integral fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     
-    <title>Oasis Supply Chain dApp</title>
+    <title>Supply Chain Tracker</title>
   </head>
   
   <body>
